# SDL-Samples

./: CMakeLists.txt  README.md  run.bat
01-Window/: CMakeLists.txt  main.c
02-OGL-Triangle/: CMakeLists.txt  gl.c  main.c  shader.frag  shader.vert
02-OGL-Triangle/glad/: gl.h
03-D3D12-Triangle/: CMakeLists.txt  main.c
03-D3D12-Triangle/shaders/: vertex.hlsl
04-Vulkan-Triangle/: CMakeLists.txt  main.c
